data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1658.wast
;; 9. **Test Description**: Nest a loop and an `if` inside another loop, with a `br_if` targeting the outermost loop from inside the `if`. Test for correct backward jump and loop re-entry.    - **Constraint Checked**: Correctly maintaining loop re-entry point through conditional branching.    - **Relation to Mismanagement of Block Nesting**: Errors can cause failed or incorrect loop restart handling.

(assert_invalid
  (module
    (func (loop
      (if (i32.const 1)
        (then (br_if 1 (i32.const 1)))
      )
      (br 0)
    ))
  )
  "type mismatch"
)